--- a/index.html
+++ b/index.html
@@ -160,13 +160,12 @@
                           <span style="--i:1">e</span>
                           <span style="--i:2">n</span>
                           <span style="--i:3">d</span>
-                          <span style="--i:4">M</span>
+                          <span style="--i:4">R</span>
                           <span style="--i:5">e</span>
                           <span style="--i:6">s</span>
-                          <span style="--i:7">s</span>
-                          <span style="--i:8">a</span>
-                          <span style="--i:9">g</span>
-                          <span style="--i:10">e</span>
+                          <span style="--i:7">u</span>
+                          <span style="--i:8">m</span>
+                          <span style="--i:9">e</span>
                         </p>
                       </div>
                       <div class="state state--sent">
